--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ header img {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     margin-top: 10px;
     font-size: 0.9rem;
