--- a/style.css
+++ b/style.css
@@ -206,9 +206,9 @@ footer {
 }
 
 @media screen and (min-width: 768px) {
-    header {
+    /* header {
         padding: 60px 100px 60px 100px !important;
-    }
+    } */
     header h1 {
         font-size: 2.5rem;
     }
